--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Build Files
+target/
+
 # Package Files #
 *.jar
 *.war
@@ -22,6 +25,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# ide files
+# IDE Files
 *.iml
 .idea
