--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,49 @@
 server.port=8888
 #自定义属性 name
 master.name=Hubery
+
+spring.devtools.restart.enabled=true
+
 #web 配置
-#视图文件前缀
+# SPRING MVC (WebMvcProperties)
+# Amount of time (in milliseconds) before asynchronous request handling times out.
+#spring.mvc.async.request-timeout=
+# Date format to use. For instance `dd/MM/yyyy`.
+spring.mvc.date-format=yyyy-MM-dd
+# Dispatch TRACE requests to the FrameworkServlet doService method.
+#spring.mvc.dispatch-trace-request=false
+# Dispatch OPTIONS requests to the FrameworkServlet doService method.
+#spring.mvc.dispatch-options-request=true
+# Enable resolution of favicon.ico.
+#spring.mvc.favicon.enabled=true
+# Enable Spring's HttpPutFormContentFilter.
+#spring.mvc.formcontent.putfilter.enabled=true
+# If the content of the "default" model should be ignored during redirect scenarios.
+#spring.mvc.ignore-default-model-on-redirect=true
+# Locale to use. By default, this locale is overridden by the "Accept-Language" header.
+#spring.mvc.locale=
+# Define how the locale should be resolved.
+#spring.mvc.locale-resolver=accept-header
+# Enable warn logging of exceptions resolved by a "HandlerExceptionResolver".
+spring.mvc.log-resolved-exception=true
+# Maps file extensions to media types for content negotiation.
+#spring.mvc.media-types.*=
+# Formatting strategy for message codes. For instance `PREFIX_ERROR_CODE`.
+#spring.mvc.message-codes-resolver-format=
+# Load on startup priority of the Spring Web Services servlet.
+#spring.mvc.servlet.load-on-startup=-1
+# Path pattern used for static resources.
+spring.mvc.static-path-pattern=/**
+# If a "NoHandlerFoundException" should be thrown if no Handler was found to process a request.
+spring.mvc.throw-exception-if-no-handler-found=true
+# Spring MVC view prefix.
 spring.mvc.view.prefix=/view/
-#视图文件后缀
+# Spring MVC view suffix.
 spring.mvc.view.suffix=.html
+
+# thymeleaf
+spring.thymeleaf.cache=false
+
 #datasource配置
 spring.datasource.url=jdbc:mysql://localhost:3306/collapsar?useUnicode=true&characterEncoding=utf-8
 spring.datasource.username=root
@@ -14,3 +52,26 @@ spring.datasource.password=hubery
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.main.allow-bean-definition-overriding=true
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+
+# MONGODB (MongoProperties)
+# Authentication database name.
+#spring.data.mongodb.authentication-database=
+# Database name.
+#spring.data.mongodb.database=test
+# Fully qualified name of the FieldNamingStrategy to use.
+#spring.data.mongodb.field-naming-strategy=
+# GridFS database name.
+#spring.data.mongodb.grid-fs-database=
+# Mongo server host. Cannot be set with uri.
+#spring.data.mongodb.host=localhost
+# Login password of the mongo server. Cannot be set with uri.
+#spring.data.mongodb.password=
+# Mongo server port. Cannot be set with uri.
+#spring.data.mongodb.port=27017
+# Enable Mongo repositories.
+#spring.data.mongodb.repositories.enabled=true
+# Mongo database URI. Cannot be set with host, port and credentials.
+#spring.data.mongodb.uri=mongodb://localhost/test
+# Login user of the mongo server. Cannot be set with uri.
+#spring.data.mongodb.username=
