--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.devtools.restart.enabled=true
 # Amount of time (in milliseconds) before asynchronous request handling times out.
 #spring.mvc.async.request-timeout=
 # Date format to use. For instance `dd/MM/yyyy`.
-spring.mvc.date-format=yyyy-MM-dd
+spring.mvc.date-format=yyyy-MM-dd HH:mm:ss
 # Dispatch TRACE requests to the FrameworkServlet doService method.
 #spring.mvc.dispatch-trace-request=false
 # Dispatch OPTIONS requests to the FrameworkServlet doService method.
